Tighten intro paragraph spacing; update copy; fix outer wrapper tag

--- a/oidc-plugin-server/src/main/resources/buildServerResources/jwt-admin.css
+++ b/oidc-plugin-server/src/main/resources/buildServerResources/jwt-admin.css
@@ -11,6 +11,10 @@
     max-width: 680px;
 }
 
+.jwt-intro + .jwt-intro {
+    margin-top: -16px;
+}
+
 .jwt-sec {
     margin-bottom: 30px;
 }
